@@ -83,7 +83,7 @@ analysis by using the class :class:`EinsteinMSD`
 .. code-block:: python
 
     u = mda.Universe(RANDOM_WALK, RANDOM_WALK_TOPO)
-    MSD = msd.EinsteinMSD(u, 'all', msd_type='xyz', fft=True)
+    MSD = msd.EinsteinMSD(u, select='all', msd_type='xyz', fft=True)
     MSD.run()
 
 The MSD can then be accessed as
@@ -223,6 +223,7 @@ import numpy as np
 import logging
 from ..due import due, Doi
 from .base import AnalysisBase
+from ..core import groups
 
 logger = logging.getLogger('MDAnalysis.analysis.msd')
 
@@ -239,13 +240,14 @@ del Doi
 
 class EinsteinMSD(AnalysisBase):
     r"""Class to calculate Mean Squared Displacement by the Einstein relation.
-    
+
     Parameters
     ----------
-    u : Universe
-        An MDAnalysis :class:`Universe`.
+    u : Universe or AtomGroup
+        An MDAnalysis :class:`Universe` or :class:`AtomGroup`.
+        Note that :class:`UpdatingAtomGroup` instances are not accepted.
     select : str
-        A selection string. Defaults to `None` in which case
+        A selection string. Defaults to "all" in which case
         all atoms are selected.
     msd_type : {'xyz', 'xy', 'yz', 'xz', 'x', 'y', 'z'}
         Desired dimensions to be included in the MSD. Defaults to 'xyz'.
@@ -263,6 +265,8 @@ class EinsteinMSD(AnalysisBase):
         The averaged MSD over all the particles with respect to lag-time.
     msd_per_particle : :class:`numpy.ndarray`
         The MSD of each individual particle with respect to lag-time.
+    ag : :class:`AtomGroup`
+        The :class:`AtomGroup` resulting from your selection
     n_frames : int
         Number of frames included in the analysis.
     n_particles : int
@@ -270,14 +274,14 @@ class EinsteinMSD(AnalysisBase):
 
     """
 
-    def __init__(self, u, select, msd_type='xyz', fft=True, **kwargs):
+    def __init__(self, u, select='all', msd_type='xyz', fft=True, **kwargs):
         r"""
         Parameters
         ----------
-        u : Universe
-            An MDAnalysis :class:`Universe`.
+        u : Universe or AtomGroup
+            An MDAnalysis :class:`Universe` or :class:`AtomGroup`.
         select : str
-            A selection string. Defaults to `None` in which case
+            A selection string. Defaults to "all" in which case
             all atoms are selected.
         msd_type : {'xyz', 'xy', 'yz', 'xz', 'x', 'y', 'z'}
             Desired dimensions to be included in the MSD. Defaults to 'xyz'.
@@ -288,9 +292,11 @@ class EinsteinMSD(AnalysisBase):
             Defaults to ``True``.    
 
         """
-        self.u = u
+        if isinstance(u, groups.UpdatingAtomGroup):
+            raise TypeError("UpdatingAtomGroups are not valid for MSD "
+                            "computation")
 
-        super(EinsteinMSD, self).__init__(self.u.trajectory, **kwargs)
+        super(EinsteinMSD, self).__init__(u.universe.trajectory, **kwargs)
 
         # args
         self.select = select
@@ -299,8 +305,8 @@ class EinsteinMSD(AnalysisBase):
         self.fft = fft
 
         # local
-        self._atoms = self.u.select_atoms(self.select)
-        self.n_particles = len(self._atoms)
+        self.ag = u.select_atoms(self.select)
+        self.n_particles = len(self.ag)
         self._position_array = None
 
         # result
@@ -340,7 +346,7 @@ class EinsteinMSD(AnalysisBase):
         # shape of position array set here, use span in last dimension
         # from this point on
         self._position_array[self._frame_index] = (
-        self._atoms.positions[:, self._dim])
+            self.ag.positions[:, self._dim])
 
     def _conclude(self):
         if self.fft:
@@ -356,7 +362,7 @@ class EinsteinMSD(AnalysisBase):
         positions = self._position_array.astype(np.float64)
         for lag in lagtimes:
             disp = positions[:-lag, :, :] - positions[lag:, :, :]
-            sqdist = np.square(disp).sum(axis=-1) 
+            sqdist = np.square(disp).sum(axis=-1)
             self.msds_by_particle[lag, :] = np.mean(sqdist, axis=0)
         self.timeseries = self.msds_by_particle.mean(axis=1)
 
