@@ -22,6 +22,7 @@
 #
 
 
+from MDAnalysis.analysis.msd import EinsteinMSD as MSD
 import MDAnalysis as mda
 
 from numpy.testing import (assert_almost_equal, assert_equal)
@@ -42,21 +43,6 @@ def SELECTION():
 @pytest.fixture(scope='module')
 def u():
     return mda.Universe(PSF, DCD)
-
-
-@block_import('tidynamics')
-def test_notidynamics(u, SELECTION):
-    # Have to avoid importing until here as otherwise tidynamics will already
-    # be imported
-    from MDAnalysis.analysis.msd import EinsteinMSD as MSD
-
-    with pytest.raises(ImportError, match="tidynamics was not found"):
-        u = mda.Universe(PSF, DCD)
-        msd = MSD(u, SELECTION)
-        msd.run()
-
-
-from MDAnalysis.analysis.msd import EinsteinMSD as MSD
 
 
 @pytest.fixture(scope='module')
@@ -89,6 +75,14 @@ def step_traj(NSTEP):  # constant velocity
     return u
 
 
+@block_import('tidynamics')
+def test_notidynamics(u, SELECTION):
+    with pytest.raises(ImportError, match="tidynamics was not found"):
+        u = mda.Universe(PSF, DCD)
+        msd = MSD(u, SELECTION)
+        msd.run()
+
+
 def characteristic_poly(n, d):
     # polynomial that describes unit step traj MSD
     x = np.arange(0, n)
@@ -101,6 +95,16 @@ class TestMSDSimple(object):
     def test_selection_works(self, msd):
         # test some basic size and shape things
         assert_equal(msd.n_particles, 10)
+
+    def test_ag_accepted(self, u):
+        ag = u.select_atoms("resid 1")
+        m = MSD(ag, msd_type='xyz', fft=False)
+
+    def test_updating_ag_rejected(self, u):
+        updating_ag = u.select_atoms("around 3.5 resid 1", updating=True)
+        errmsg = "UpdatingAtomGroups are not valid"
+        with pytest.raises(TypeError, match=errmsg):
+            m = MSD(updating_ag, msd_type='xyz', fft=False)
 
     @pytest.mark.parametrize('msdtype', ['foo', 'bar', 'yx', 'zyx'])
     def test_msdtype_error(self, u, SELECTION, msdtype):
